--- a/package.json
+++ b/package.json
@@ -1,22 +1,66 @@
 {
-  "name": "electron-browser",
-  "version": "1.0.0",
-  "description": "browser ui for electron, written in react",
+  "name": "elector",
+  "version": "2.0.0",
+  "description": "Tor browser built with Electron",
+  "main": "index.js",
   "scripts": {
     "start": "electron .",
+    "build": "electron-builder",
+    "build:mac": "electron-builder --mac",
+    "build:win": "electron-builder --win",
+    "build:linux": "electron-builder --linux",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "electron",
     "browser",
-    "webview",
-    "react"
+    "tor",
+    "privacy",
+    "security"
   ],
-  "author": "Paul Frazee <pfrazee@gmail.com>",
+  "author": "James Campbell <james@jamescampbell.us>",
+  "contributors": [
+    "Paul Frazee <pfrazee@gmail.com>"
+  ],
   "license": "MIT",
   "devDependencies": {
-    "electron-prebuilt": "^0.28.2"
+    "electron": "^33.2.0",
+    "electron-builder": "^25.1.8"
   },
-  "dependencies": {
+  "dependencies": {},
+  "build": {
+    "appId": "com.elector.browser",
+    "productName": "Elector",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "**/*",
+      "!node_modules",
+      "!dist",
+      "!.git"
+    ],
+    "mac": {
+      "category": "public.app-category.utilities",
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "icon": "assets/icon.icns"
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ],
+      "icon": "assets/icon.ico"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "category": "Network"
+    }
   }
 }
