--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,15 @@ build/Release
 node_modules
 jspm_packages
 
+# Build output
+dist
+out
+
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# macOS
+.DS_Store
